# kanban_backend

./: .gitignore  README.md  init_db.py  pyproject.toml
features/: environment.py  smoke_api.feature
features/steps/: smoke_steps.py
src/kanban_backend/: board_rules.py  db.py  filters.py  history.py  main.py  permissions.py  task_rules.py
src/kanban_backend/models/: task.py  user.py
src/kanban_backend/routers/: tasks.py  users.py
tests/: conftest.py  test_board_rules.py  test_filters.py  test_history.py  test_permissions.py  test_task_integration.py  test_task_rules.py  test_user_integration.py
