[project]
name = "kanban-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "burjuazniy",email = "127854656+burjuazniy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.124.2,<0.125.0)"
]

[tool.poetry]
packages = [{include = "kanban_backend", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
coverage = "^7.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
